# Practice

./: .env  .gitignore  README.md  docker-compose.yml  image_preprocessing.py  nginx:web-serivce.conf  package-lock.json  package.json
backend/: .dockerignore  CMakeLists.txt  Dockerfile  TODO.txt  main  requirements.txt
backend/app/: main.py  models.py  not_main.py  schemas.py  services.py
backend/src/: check_request.cpp  main.cpp
db/: Dockerfile  init.sql
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  BACKEND_URL.js  IMAGE_SRC.js  config.js  index.js
frontend/src/components/: Login.js  Login.js.orig  Profile.js  Register.js  card.js  Сard.js
frontend/src/css/: General.css  Header.css  Login.css  Main.css  Profile.css  Register.css  card.css  Сard.css
ml/: .dockerignore  .gitignore  Dockerfile  classification.py  client.py  image.py  model.py  pnemonia3classes.ipynb  requirements.txt  resnet18model.ipynb  trainingmodel.ipynb
ml/programm/: Dockerfile  classification.py  client.py  image.py  model.py  requirements.txt
py_backend/: Dockerfile  requirements.txt
py_backend/app/: database.py  main.py  models.py  schemas.py  services.py
src/: App.js  index.js
src/components/: Header.js  Login.js  Register.js
src/css/: Login.css  Register.css  main.css
